feat: :sparkles: kafka producer & consumer

--- a/.env
+++ b/.env
@@ -7,3 +7,9 @@ dsnTest=":memory:"
 env="dev"
 debug=true
 AutoMigrateDb=true
+
+kafkaBootstrapServersLALALA="host.docker.internal:9094"
+kafkaBootstrapServers="kafka:9092"
+kafkaConsumerGroupId=codepix
+kafkaTransactionTopic="transactions"
+kafkaTransactionConfirmationTopic="transaction_confirmation"
